# Simple-Derivative-Calculator

./: CMakeLists.txt  README.md
inc/: derivative.h
src/: main.cpp
